// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapRequested creates a new swap request (DEPOSIT_CHANNEL) 1`] = `
{
  "ccmDepositReceivedBlockIndex": "87-13",
  "ccmGasBudget": "2",
  "ccmMessage": "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000003f7a400000000000000000000000000000000000000000000000000000000000000074761735465737400000000000000000000000000000000000000000000000000",
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "4999922",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2024-08-23T13:13:12.002Z,
  "depositReceivedBlockIndex": "87-13",
  "depositTransactionRef": null,
  "destAddress": "0xa51c1fc2f0d1a1b8494ed1fe312d7c3a78ed91c0",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 2n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "CCM",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
}
`;

exports[`swapRequested creates a new swap request (INGRESS_EGRESS_FEE) 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "450800",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": null,
  "depositReceivedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": null,
  "destAsset": "ArbEth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 8n,
  "originType": "INTERNAL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "INGRESS_EGRESS_FEE",
  "srcAddress": null,
  "srcAsset": "ArbUsdc",
  "swapDepositChannelId": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
}
`;

exports[`swapRequested creates a new swap request (VAULT) 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "5000000000000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": null,
  "depositReceivedBlockIndex": null,
  "depositTransactionRef": "0x76628bde2b6d66c84104d3721456edde968b8bafb347f63fbb67816546131204",
  "destAddress": "0x720bb1f2f46ed499dc328cbe43c54a03d710cd03",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 62n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "ArbEth",
  "swapDepositChannelId": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
}
`;
